# SDL-Playground

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  macros.c  macros.h  main.c  map.c  map.h  video.c  video.h
tests/: Makefile.am  Makefile.in  check_map.c
